--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mobx: ^2.3.3+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.10
+  mobx_codegen: ^2.6.1  
+  flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: "^0.13.1"
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/list_is_empty.png
