--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   mobx: ^2.3.3+2
+  custom_navigation_bar: ^0.8.2
+  go_router: ^14.2.1
 
 dev_dependencies:
   flutter_test:
