--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: savings_fund_planner
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ">=3.4.1 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   mobx: ^2.3.3+2
+  flutter_mobx: ^2.2.1+1
   custom_navigation_bar: ^0.8.2
   go_router: ^14.2.1
 
@@ -17,8 +18,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  build_runner: ^2.4.10
-  mobx_codegen: ^2.6.1  
+  build_runner: ^2.4.11
+  mobx_codegen: ^2.6.1
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: "^0.13.1"
 
