--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   custom_navigation_bar: ^0.8.2
   go_router: ^14.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,7 @@ dev_dependencies:
   mobx_codegen: ^2.6.1
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: "^0.13.1"
+  modal_bottom_sheet: ^3.0.0
 
 flutter:
   uses-material-design: true
