--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,16 @@ dependencies:
   image_picker: ^1.1.2
 
   modal_bottom_sheet: any
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.15
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  build_runner: ^2.4.11
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
+  isar_generator: ^3.1.0+1
   mobx_codegen: ^2.6.1
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: "^0.13.1"
