--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,16 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   go_router: ^14.2.1
   image_picker: ^1.1.2
-
   modal_bottom_sheet: any
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
   provider: ^6.1.2
+  intl: ^0.19.0
+  syncfusion_flutter_charts: ^20.2.39
+  
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
