--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,6 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   syncfusion_flutter_charts: ^20.2.39
-  
-
 
 dev_dependencies:
   flutter_test:
@@ -48,3 +46,15 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#000095"
+  image: assets/splash.png
+  android: true
+  ios: true
+  web: false
+
+  android_12:
+    color: "#000095"
+    image: assets/splash.png
+    android_gravity: fit
