--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name = "android.permission.ACCESS_NOTIFICATION_POLICY"/>
+
     <application
         android:label="Fund planner"
         android:name="${applicationName}"
